--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
 <body>
     <!-- Navbar start -->
     <div class="navbar">
-        <a href="#"><img src="assets\MY logo.png" alt=""></a>
+        <a href="#"><img src="MY logo.png" alt=""></a>
         <div class="menu">
             <ul>
                 <li><a href="#About">About</a></li>
@@ -31,7 +31,7 @@
 
     <!-- about me start -->
     <div class="about" id="About">
-        <img src="assets\myPIc.PNG" alt="">
+        <img src="myPIc.PNG" alt="">
         <div class="aboutMe">
             <div class="my_desc">
                 <h1>Hi, <br>I'm <span>Muharim Awaluddin.</span></h1>
@@ -112,17 +112,17 @@
         <h1>My Projects</h1>
         <div class="pjct">
             <div class="pjct1">
-                <img src="assets\news.png" alt="">
+                <img src="news.png" alt="">
                 <h3>News Home Page</h3>
                 <a target="_blank" href="https://news-homepage-liard-xi.vercel.app/">Open</a>
             </div>
             <div class="pjct2">
-                <img src="assets\age kalkulator.png" alt="">
+                <img src="age kalkulator.png" alt="">
                 <h3>Age Calculator App</h3>
                 <a target="_blank" href="https://age-calculator-app-blond.vercel.app/">Open</a>
             </div>
             <div class="pjct3">
-                <img src="assets\results-summary.png" alt="">
+                <img src="results-summary.png" alt="">
                 <h3>Results Sumary Component</h3>
                 <a target="_blank" href="https://results-summary-component-phi-seven.vercel.app/">Open</a>
             </div>
